베팅금액 0원이하 수정